fix porque elegirnos alignment

--- a/static/styles.css
+++ b/static/styles.css
@@ -242,23 +242,43 @@ html, body {
 .card-container {
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    /* gap: 64px; */
+
+    
 }
 
 .choose-card {
-    width: 228px;
+    width: 100%;
     height: 221px;
     border-right: 2px solid black;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+    
 }
+
+.choose-card-container {
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: auto;
+    padding: 8px 24px;
+}
+
+
 
 .choose-card:last-child {
     border-right: none;
 }
 
-.choose-card-container {
-    width: 196px;
-    height: 155px;
-}
+
 
 /* .choose-card-image {
 
